--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-h5-audio-player": "^3.10.0-rc.1",
+    "react-intersection-observer": "^9.16.0",
     "sanity": "^3.87.1",
     "styled-components": "^6.1.17",
     "zustand": "^5.0.4"
