--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@tailwindcss/forms": "^0.5.10",
     "framer-motion": "^12.9.4",
     "howler": "^2.2.4",
+    "lucide-react": "^0.508.0",
     "next": "15.3.1",
     "next-sanity": "^9.10.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-h5-audio-player": "^3.10.0-rc.1",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "sanity": "^3.87.1",
     "styled-components": "^6.1.17",
