--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.87.1",
+    "@stripe/stripe-js": "^7.3.0",
     "@tailwindcss/forms": "^0.5.10",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.9.4",
     "howler": "^2.2.4",
     "lucide-react": "^0.508.0",
@@ -22,7 +24,9 @@
     "react-h5-audio-player": "^3.10.0-rc.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "resend": "^4.5.1",
     "sanity": "^3.87.1",
+    "stripe": "^18.1.0",
     "styled-components": "^6.1.17",
     "zustand": "^5.0.4"
   },
