--- a/env.example
+++ b/env.example
@@ -1,17 +1,24 @@
-# Sanity Configuration
-NEXT_PUBLIC_SANITY_PROJECT_ID=your-sanity-project-id
-NEXT_PUBLIC_SANITY_DATASET=production
-SANITY_API_TOKEN=your-sanity-api-token
+
+# Sanity
+NEXT_PUBLIC_SANITY_PROJECT_ID=
+NEXT_PUBLIC_SANITY_DATASET=
+SANITY_API_TOKEN=
+
+
 
 # Stripe Configuration
-STRIPE_SECRET_KEY=your-stripe-secret-key
-STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 
 # Email Configuration
-RESEND_API_KEY=your-resend-api-key
-EMAIL_FROM=orders@yourdomain.com
-ADMIN_EMAIL=admin@yourdomain.com
+RESEND_API_KEY=
+EMAIL_FROM=
+ADMIN_EMAIL=
 
-# Site URL (used for success/cancel URLs)
+# Site URL
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
+#Enviornment
+
+NODE_ENV=development
