--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.39",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.87.1",
     "@stripe/stripe-js": "^7.3.0",
@@ -17,6 +18,7 @@
     "framer-motion": "^12.9.4",
     "howler": "^2.2.4",
     "lucide-react": "^0.508.0",
+    "nanoid": "^5.1.5",
     "next": "15.3.1",
     "next-sanity": "^9.10.6",
     "react": "^19.0.0",
@@ -24,6 +26,7 @@
     "react-h5-audio-player": "^3.10.0-rc.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-toastify": "^11.0.5",
     "resend": "^4.5.1",
     "sanity": "^3.87.1",
     "stripe": "^18.1.0",
