--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sanity/vision": "^3.87.1",
     "@stripe/stripe-js": "^7.3.0",
     "@tailwindcss/forms": "^0.5.10",
+    "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.9.4",
     "howler": "^2.2.4",
@@ -31,6 +32,7 @@
     "sanity": "^3.87.1",
     "stripe": "^18.1.0",
     "styled-components": "^6.1.17",
+    "tailwind-merge": "^3.2.0",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
